# scraping_web

./: .gitignore  README.md  pyproject.toml
notebooks/: parse_html.ipynb
