[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = "Web scraping tutorial"
authors = ["Carlos Pinto Pérez <carlospinto93p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
pandas = "^1.5.3"
html5lib = "^1.1"
lxml = "^4.9.2"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
